--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.1.1",
     "react-scripts": "5.0.0-next.58",
     "web-vitals": "^2.1.2"
